# yorum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GRAMMAR.ebnf  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml  release.yml
editors/vscode/: language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: yorum.tmLanguage.json
examples/: array_repeat.yrm  arrays.yrm  channels.yrm  chars.yrm  closures.yrm  collections.yrm  concurrency.yrm  contracts.yrm  effects.yrm  fibonacci.yrm  generics.yrm  hello.yrm  http_client.yrm  iterators.yrm  loop_control.yrm  maps.yrm  math.yrm  methods.yrm  operators.yrm  optimization.yrm  option_result.yrm  pattern_match.yrm  sets.yrm  sieve.yrm  string_interpolation.yrm  string_ops.yrm  string_utils.yrm  strings.yrm  structs.yrm  tcp_echo_client.yrm  tcp_echo_server.yrm  traits.yrm  try_operator.yrm  tuples.yrm
examples/dependencies/app/: yorum.toml
examples/dependencies/string_utils/: yorum.toml
examples/project/: yorum.toml
examples/project/src/: main.yrm  (+1 more)
plans/: codegen-refactoring.md
runtime/: runtime.c
src/: lib.rs  main.rs  manifest.rs  repl.rs
src/compiler/: ast.rs  codegen.rs  dce.rs  formatter.rs  lexer.rs  lockfile.rs  mod.rs  module_resolver.rs  monomorphize.rs  ownership.rs  package.rs  parser.rs  project.rs  semver.rs  span.rs  token.rs  typechecker.rs
src/lsp/: server.rs  transport.rs  types.rs
tests/: integration_tests.rs
yorum-in-yorum/: yorum.toml
yorum-in-yorum/src/: main.yrm
(+7 files in other folders)
