[package]
name = "yorum"
version = "0.2.0"
edition = "2021"
description = "The Yorum programming language — LLM-first, deterministic, LLVM-compiled"
license = "MIT"

[[bin]]
name = "yorum"
path = "src/main.rs"

[lib]
name = "yorum"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
